--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Color Betting Game</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
- <style>
+<style>
   body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh; /* Allow content to grow */
+    align-items: flex-start; /* Align content at the top */
     background: linear-gradient(135deg, #1e2a47, #2c3e50);
     color: #fff;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden; /* Allow vertical scrolling */
     background: url('bgto.jpg') no-repeat center center / cover;
   }
 
@@ -24,65 +23,186 @@
     width: 90%;
     max-width: 1200px;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap; /* Allow sections to wrap */
     gap: 30px;
-    flex-wrap: wrap;
     background: rgba(0, 0, 0, 0.7);
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-    animation: fadeIn 1s ease-in-out;
+    margin: 20px auto; /* Center the container with vertical spacing */
   }
 
   .section {
     flex: 1;
     min-width: 280px;
-    max-width: 350px;
+    max-width: 100%; /* Make sections responsive */
     text-align: center;
     padding: 20px;
     border-radius: 15px;
     background: rgba(0, 0, 0, 0.8);
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.6);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-bottom: 20px; /* Add spacing between sections */
   }
 
-  /* Responsive Design */
-  @media (max-width: 768px) {
+  h1, h2 {
+    font-size: 2.5rem;
+    color: #ffd700;
+    text-shadow: 2px 2px 6px #000;
+    margin-bottom: 20px;
+    animation: slideIn 1s ease-out;
+  }
+
+  @keyframes slideIn {
+    0% { transform: translateY(-50px); opacity: 0; }
+    100% { transform: translateY(0); opacity: 1; }
+  }
+
+  label {
+    font-weight: 600;
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  input {
+    padding: 10px;
+    font-size: 1.1rem;
+    border: 2px solid #ffd700;
+    border-radius: 8px;
+    width: 100%; /* Full width for responsiveness */
+    margin-bottom: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    transition: all 0.3s ease;
+  }
+
+  input:focus {
+    border-color: #ffcc00;
+    outline: none;
+  }
+
+  #color-boxes {
+    display: flex;
+    justify-content: center; /* Center color boxes */
+    flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    gap: 10px; /* Reduce gaps for better fit */
+    margin: 20px 0;
+    transition: transform 0.3s ease;
+  }
+
+  .color-box {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 3px solid transparent;
+    transition: transform 0.3s, border-color 0.3s;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  }
+
+  .color-box:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+  }
+
+  .selected {
+    border-color: #ffd700;
+    box-shadow: 0 0 20px #ffd700;
+  }
+
+  #selected-color {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border: 2px solid #333;
+    border-radius: 10px;
+    margin: 10px auto;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  }
+
+  button {
+    font-size: 1.3rem;
+    padding: 15px;
+    background: #ffd700;
+    color: #000;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-top: 20px;
+    width: 100%; /* Full width for mobile compatibility */
+  }
+
+  button:disabled {
+    background: #555;
+    color: #aaa;
+    cursor: not-allowed;
+  }
+
+  button:hover:not(:disabled) {
+    background: #ffcc00;
+    transform: translateY(-5px);
+  }
+
+  #generated-colors-container {
+    display: flex;
+    justify-content: center; /* Center generated colors */
+    flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    gap: 10px; /* Adjust gap for spacing */
+    margin: 20px 0;
+    animation: fadeInUp 0.8s ease-out;
+  }
+
+  @keyframes fadeInUp {
+    0% { opacity: 0; transform: translateY(20px); }
+    100% { opacity: 1; transform: translateY(0); }
+  }
+
+  .generated-color {
+    width: 60px;
+    height: 60px;
+    border-radius: 12px;
+    background: gray;
+    transition: transform 0.3s;
+  }
+
+  .generated-color:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  }
+
+  #result {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #ffd700;
+    margin-top: 20px;
+  }
+
+  #current-balance {
+    font-weight: 600;
+  }
+
+  /* Responsive Styles */
+  @media screen and (max-width: 768px) {
     .container {
-      flex-direction: column;
-      gap: 20px;
+      flex-direction: column; /* Stack sections vertically */
+      padding: 10px;
     }
 
-    button {
-      font-size: 1.1rem; /* Adjust button size */
-      padding: 12px; /* Adjust padding */
+    .section {
+      margin-bottom: 20px;
     }
-  }
 
-  @media (max-width: 480px) {
     h1, h2 {
-      font-size: 1.8rem; /* Adjust header size */
+      font-size: 2rem;
     }
 
-    input {
-      width: 100%; /* Full width for inputs */
-    }
-
-    button {
-      font-size: 1rem; /* Smaller font for smaller screens */
-    }
-
-    .color-box {
-      width: 60px; /* Adjust size of color boxes */
-      height: 60px;
-    }
-
-    .generated-color {
-      width: 60px; /* Adjust size of generated colors */
-      height: 60px;
+    #color-boxes, #generated-colors-container {
+      gap: 10px;
     }
   }
 </style>
+
 
 </head>
 <body>
